Adjusted margin-top and padding on #main across breakpoints to improve content spacing beneath the fixed header.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2854,6 +2854,7 @@ input, select, textarea {
 	#header {
 		transition: transform .35s ease-in-out;
 		z-index: 1000;
+		top: 0;
 		left: 0;
 		right: 0;
 		position: fixed;
@@ -3223,18 +3224,40 @@ input, select, textarea {
 		}
 
 /* Main */
-
+/* Base: Large screens (desktop) */
+#main {
+	margin-top: 2.5em;
+	padding: 0 0 6em 0;
+}
+  
+/* Mid-range screens (tablet sizes) */
+@media screen and (max-width: 1400px) {
 	#main {
-		padding: 0em 0 6em 0 ;
+	  margin-top: 5em;
 	}
+}
 
-		@media screen and (max-width: 736px) {
+/* Additional breakpoint: Up to 800px */
+@media screen and (max-width: 1300px) {
+	#main {
+		margin-top: 7em;
+	}
+}
 
-			#main {
-				padding: 0em 0 4em 0 ;
-			}
-
-		}
+/* Additional breakpoint: Up to 800px */
+@media screen and (max-width: 1100px) {
+	#main {
+		margin-top: 5.2em;
+	}
+}
+  
+/* Small screens (mobile) */
+@media screen and (max-width: 736px) {
+	#main {
+	  margin-top: calc(5.5em + env(safe-area-inset-top));
+	  padding: 0 0 4em 0;
+	}
+}
 
 /* Footer */
 
